testsuite/tests/th/TH_exn1.stderr

TH_exn1.hs:1:1: error:
    Exception when trying to run compile-time code:
      TH_exn1.hs:(9,2)-(11,2): Non-exhaustive patterns in case

    Code: (case reverse "no" of [] -> return [])
